<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">ProjectVehicleReports</string>
    <string name="auth_first_name">Имя</string>
    <string name="auth_second_name">Фамилия</string>
    <string name="auth_company">Компания</string>
    <string name="auth_email">E-mail</string>
	<string name="auth_password">Пароль</string>
	<string name="data_vin">VIN</string>
	<string name="data_marka">Марка</string>
	<string name="data_model">Модель</string>
	<string name="data_odometer">Пробег, км</string>
	<string name="data_comments">Комментарий</string>
	


</resources>