<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        >
        <EditText 
            android:id="@+auth/first_name"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/auth_first_name"
        	android:inputType="textPersonName"
            />
        
        <EditText 
            android:id="@+auth/second_name"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/auth_second_name"
        	android:inputType="textPersonName"
            />
        <EditText 
            android:id="@+auth/company"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/auth_company"
        	android:inputType="text"
            />
        <EditText 
            android:id="@+auth/email"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/auth_email"
        	android:inputType="textEmailAddress"
            />
        <EditText 
            android:id="@+auth/password"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/auth_password"
        	android:inputType="textPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
        >
        <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        >
        <LinearLayout 
         android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
            >
        <Button
            android:text="Сохранить"
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
             />

        <Button
            android:text="Отмена"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
             />
        </LinearLayout>
</LinearLayout>
    </LinearLayout>
    
</LinearLayout>